# 2dSDLGameEngine

./: .gitignore  CMakeLists.txt  SDL-Test.sln
SDL-Test/: Main.cpp  SDL-Test.vcxproj  SDL-Test.vcxproj.filters  Window.cpp  Window.h
SDL-Test/Core/: Constants.h  EntityManager.cpp
SDL-Test/Core/Components/: Sprite.h  Transform.h
SDL-Test/Render/: RectManager.h  Video.h
cmake/: FindSDL2_image.cmake
src/: Bdv.h  Component.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Main.cpp  Makefile  Script.h
src/Components/: Transform.h
src/Core/: Component.h  DebugHelper.h  Entity.h  Window.h
src/Core/Components/: Sprite.h  Transform.h
src/Render/: Video.h
